@@ -5,7 +5,9 @@ import it.auties.whatsapp.model.response.WebVersionResponse;
 import it.auties.whatsapp.model.signal.auth.UserAgent.UserAgentPlatform;
 import it.auties.whatsapp.model.signal.auth.Version;
 import it.auties.whatsapp.util.Spec.Whatsapp;
+import lombok.Builder;
 import lombok.experimental.UtilityClass;
+import lombok.extern.jackson.Jacksonized;
 import net.dongliu.apk.parser.ByteArrayApkFile;
 import net.dongliu.apk.parser.bean.ApkSigner;
 import net.dongliu.apk.parser.bean.CertificateMeta;
@@ -15,21 +17,26 @@ import javax.crypto.Mac;
 import javax.crypto.SecretKey;
 import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.PBEKeySpec;
+import javax.crypto.spec.SecretKeySpec;
 import java.io.IOException;
 import java.lang.System.Logger;
-import java.lang.System.Logger.Level;
 import java.net.URI;
 import java.net.URLEncoder;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.security.GeneralSecurityException;
 import java.security.Security;
 import java.security.cert.CertificateException;
+import java.time.Instant;
+import java.time.temporal.ChronoUnit;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
+import java.util.regex.MatchResult;
+import java.util.regex.Pattern;
 
 import static java.net.http.HttpResponse.BodyHandlers.ofString;
 
@@ -39,20 +46,51 @@ public class MetadataHelper {
         Security.addProvider(new BouncyCastleProvider());
     }
 
-    private static final Path CACHED_APKS = Path.of(System.getProperty("user.home") + "/.whatsapp4j/apks");
+    private static final Path ANDROID_CACHE = Path.of(System.getProperty("user.home") + "/.whatsapp4j/token/android");
     private static final Logger LOGGER =  System.getLogger("Metadata");
+    private static final Pattern IOS_VERSION_PATTERN = Pattern.compile("(?<=Minimum Requirements \\(Version )\\d+\\.\\d+\\.\\d+");
 
     private volatile Version webVersion;
+    private volatile Version iosVersion;
     private volatile WhatsappApk cachedApk;
     private volatile WhatsappApk cachedBusinessApk;
 
     public CompletableFuture<Version> getVersion(UserAgentPlatform platform, boolean business) {
         return switch (platform) {
             case WEB, WINDOWS, MACOS -> getWebVersion();
-            case ANDROID -> getWhatsappData(business).thenApply(WhatsappApk::version);
-            case IOS -> CompletableFuture.completedFuture(new Version("2.22.24.81")); // TODO: Add support for dynamic version fetching
+            case ANDROID -> getAndroidData(business).thenApply(WhatsappApk::version);
+            case IOS -> getIosVersion();
             default -> throw new IllegalStateException("Unsupported mobile os: " + platform);
         };
+    }
+
+    private CompletableFuture<Version> getIosVersion() {
+        if(iosVersion != null){
+            return CompletableFuture.completedFuture(iosVersion);
+        }
+
+        // var client = HttpClient.newHttpClient();
+        //        var request = HttpRequest.newBuilder()
+        //                .GET()
+        //                .uri(URI.create(Whatsapp.IOS_UPDATE_URL))
+        //                .build();
+        //        return client.sendAsync(request, HttpResponse.BodyHandlers.ofString())
+        //                .thenApplyAsync(MetadataHelper::parseIosVersion);
+        return CompletableFuture.completedFuture(Whatsapp.DEFAULT_MOBILE_IOS_VERSION);
+    }
+
+    private Version parseIosVersion(HttpResponse<String> result) {
+        return iosVersion = IOS_VERSION_PATTERN.matcher(result.body())
+                .results()
+                .map(MatchResult::group)
+                .reduce((first, second) -> second)
+                .map(version -> new Version("2." + version))
+                .orElseGet(MetadataHelper::getDefaultIosVersion);
+    }
+
+    private Version getDefaultIosVersion() {
+        LOGGER.log(Logger.Level.WARNING, "Cannot fetch latest IOS version, falling back to %s".formatted(Whatsapp.DEFAULT_MOBILE_IOS_VERSION));
+        return Whatsapp.DEFAULT_MOBILE_IOS_VERSION;
     }
 
     private CompletableFuture<Version> getWebVersion() {
@@ -93,14 +131,16 @@ public class MetadataHelper {
     }
 
     private CompletableFuture<String> getAndroidToken(String phoneNumber, boolean business) {
-        return getWhatsappData(business)
+        return getAndroidData(business)
                 .thenApplyAsync(whatsappData -> getAndroidToken(phoneNumber, whatsappData));
     }
 
     private String getAndroidToken(String phoneNumber, WhatsappApk whatsappData) {
         try {
             var mac = Mac.getInstance("HMACSHA1");
-            mac.init(whatsappData.secretKey());
+            var secretKeyBytes = whatsappData.secretKey();
+            var secretKey = new SecretKeySpec(secretKeyBytes, 0, secretKeyBytes.length, "PBKDF2");
+            mac.init(secretKey);
             whatsappData.certificates().forEach(mac::update);
             mac.update(whatsappData.md5Hash());
             mac.update(phoneNumber.getBytes(StandardCharsets.UTF_8));
@@ -110,7 +150,7 @@ public class MetadataHelper {
         }
     }
 
-    private synchronized CompletableFuture<WhatsappApk> getWhatsappData(boolean business) {
+    private synchronized CompletableFuture<WhatsappApk> getAndroidData(boolean business) {
         if(!business && cachedApk != null){
             return CompletableFuture.completedFuture(cachedApk);
         }
@@ -120,59 +160,69 @@ public class MetadataHelper {
         }
 
         return getCachedApk(business)
-                .map(apk -> CompletableFuture.completedFuture(getWhatsappData(apk, business)))
-                .orElseGet(() -> downloadWhatsappData(business));
+                .map(CompletableFuture::completedFuture)
+                .orElseGet(() -> downloadWhatsappApk(business));
     }
 
-    private CompletableFuture<WhatsappApk> downloadWhatsappData(boolean business) {
+    private CompletableFuture<WhatsappApk> downloadWhatsappApk(boolean business) {
         return Medias.downloadAsync(business ? Whatsapp.MOBILE_BUSINESS_DOWNLOAD_URL : Whatsapp.MOBILE_DOWNLOAD_URL)
-                .thenApplyAsync(result -> onWhatsappDownloaded(business, result));
+                .thenApplyAsync(result -> getAndroidData(result, business));
     }
 
-    private WhatsappApk onWhatsappDownloaded(boolean business, byte[] result) {
-        cacheApk(business, result);
-        return getWhatsappData(result, business);
-    }
-
-    private static void cacheApk(boolean business, byte[] result) {
-        CompletableFuture.runAsync(() -> {
-            try {
-                var file = CACHED_APKS.resolve(business ? "wa.apk" : "w4b.apk");
-                Files.createDirectories(file.getParent());
-                Files.write(file, result);
-            }catch (Throwable throwable){
-                LOGGER.log(Level.WARNING, "Cannot cache apk locally", throwable);
-            }
-        });
-    }
-
-    private Optional<byte[]> getCachedApk(boolean business){
+    private Optional<WhatsappApk> getCachedApk(boolean business){
         try {
-            var file = CACHED_APKS.resolve(business ? "wa.apk" : "w4b.apk");
+            var file = getAndroidCache(business);
             if(Files.notExists(file)){
                 return Optional.empty();
             }
 
-            return Optional.of(Files.readAllBytes(file));
+            var now = Instant.now();
+            var fileTime = Files.getLastModifiedTime(file).toInstant();
+            if(fileTime.until(now, ChronoUnit.WEEKS) > 1){
+                return Optional.empty();
+            }
+
+            return Optional.of(Json.readValue(Files.readString(file), WhatsappApk.class));
         }catch (Throwable throwable){
             return Optional.empty();
         }
     }
 
-    private static WhatsappApk getWhatsappData(byte[] apk, boolean business) {
+    private static Path getAndroidCache(boolean business) {
+        return ANDROID_CACHE.resolve(business ? "whatsapp_business.json" : "whatsapp.json");
+    }
+
+    private static WhatsappApk getAndroidData(byte[] apk, boolean business) {
         try (var apkFile = new ByteArrayApkFile(apk)) {
             var version = new Version(apkFile.getApkMeta().getVersionName());
             var md5Hash = MD5.calculate(apkFile.getFileData("classes.dex"));
             var secretKey = getSecretKey(apkFile.getApkMeta().getPackageName(), getAboutLogo(apkFile));
             var certificates = getCertificates(apkFile);
             if (business) {
-                return cachedBusinessApk = new WhatsappApk(version, md5Hash, secretKey, certificates);
+                var result = new WhatsappApk(version, md5Hash, secretKey.getEncoded(), certificates, true);
+                cacheWhatsappData(result);
+                return cachedBusinessApk = result;
             }
 
-            return cachedApk = new WhatsappApk(version, md5Hash, secretKey, certificates);
+            var result = new WhatsappApk(version, md5Hash, secretKey.getEncoded(), certificates, false);
+            cacheWhatsappData(result);
+            return cachedApk = result;
         } catch (IOException | GeneralSecurityException exception) {
             throw new RuntimeException("Cannot extract certificates from APK", exception);
         }
+    }
+
+    private void cacheWhatsappData(WhatsappApk apk) {
+        CompletableFuture.runAsync(() -> {
+            try {
+                var json = Json.writeValueAsString(apk, true);
+                var file = getAndroidCache(apk.business());
+                Files.createDirectories(file.getParent());
+                Files.writeString(file, json);
+            }catch (Throwable throwable){
+                LOGGER.log(Logger.Level.WARNING, "Cannot update local cache", throwable);
+            }
+        });
     }
 
     private byte[] getAboutLogo(ByteArrayApkFile apkFile) throws IOException {
@@ -214,7 +264,9 @@ public class MetadataHelper {
         return factory.generateSecret(key);
     }
 
-    private record WhatsappApk(Version version, byte[] md5Hash, SecretKey secretKey, Collection<byte[]> certificates) {
+    @Builder
+    @Jacksonized
+    public record WhatsappApk(Version version, byte[] md5Hash, byte[] secretKey, Collection<byte[]> certificates, boolean business) {
 
     }
 }
